Create resource folder

--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,15 @@ dependencies {
 }
 
 sourceSets {
-  main.java.srcDirs = ['Source']
+
+  main {
+
+    java {
+      srcDirs = ['Source']
+    }
+
+    resources {
+      srcDirs = ['Resource']
+    }
+  }
 }
